k8s_archived/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mystartupcorp
  labels:
    name: mystartupcorp
    monitoring: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    name: observability
    monitoring: "true"
