k8s_archived/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mystartup
  labels:
    name: mystartup
    environment: production
spec:
  finalizers:
  - kubernetes
